--- a/translations/01.md
+++ b/translations/01.md
@@ -483,3 +483,363 @@ test/test_tokenizer.py ........                                                 
 ```
 
 ## 解析器
+
+解析器是我们程序中的一部分，它接受标记流并确保它们是有意义的。
+
+例如，在上一节中，我们看到分词器能接收代码字符串 `3 + 5` 和 `3 3 3 + 5 5 - - -`，但解析器却不是这样。解析器会查看 `3 + 5` 的标记并识别为两个整数的加法，但如果收到所谓 "代码" `3 3 3 + 5 5 - - -` 的标记流，解析器就会抱怨。
+
+### 解析器创建一颗树
+
+不过，解析器的作用远不止于此。解析器不仅要确保标记序列是有意义的，还要使用标记以树形构建代码的另一种表示形式。
+
+下图显示了几个示例。
+
+如果我们将代码 `3 + 5` 传递给分词器，就会得到这样的标记流：
+
+``` Python
+Token(type=<TokenType.INT: 'int'>, value=3)
+Token(type=<TokenType.PLUS: 'plus'>, value=None)
+Token(type=<TokenType.INT: 'int'>, value=5)
+Token(type=<TokenType.EOF: 'eof'>, value=None)
+```
+
+解析器将使用这些标记创建一棵有三个节点的简单树，其中加号节点连接另外两个整数节点：
+
+![Tree representation of an addition.](../images/01/_tokens_to_ast_addition.jpg)
+
+注意根节点是加法。这是因为加法是一个运算，而整数 3 和 5 只是加法的操作数。这就是为什么节点 3 和 5 位于加法节点之下。
+
+你认为从代码 `5 - 2` 中得到的树是什么？请在纸上勾画出来，然后继续阅读。
+
+如果我们将代码 `5 - 2` 传递给标记符生成器，就会得到这样的标记流：
+
+``` Python
+Token(type=<TokenType.INT: 'int'>, value=5)
+Token(type=<TokenType.PLUS: 'minus'>, value=None)
+Token(type=<TokenType.INT: 'int'>, value=2)
+Token(type=<TokenType.EOF: 'eof'>, value=None)
+```
+
+解析器将使用这些标记创建一棵有三个节点的简单树，其中减法连接另外两个整数节点：
+
+![Tree representation of a subtraction.](../images/01/_tokens_to_ast_subtraction.jpg)
+
+请再次注意，操作（减法）是根节点。运算将其操作数作为子节点。
+
+表示减法的节点有两个子节点，因为减法需要两个数字才能运算。
+
+### 抽象语法树
+
+我们建立的这棵树被称为抽象语法树（AST）。说它是抽象语法树，是因为它是一种树形表示法，并不关心我们编写操作时使用的原始语法。它只关心我们将要执行的操作。
+
+例如，我们可以决定我们的语言将使用前缀表示法，因此加法现在将表示为 `+ a b`，减法将表示为 `- a b`。
+
+现在，分词器将以不同的顺序生成标记，但解析器仍将构建相同的树。为什么？因为解析器只关心代码做了什么，而不关心代码是如何编写的。
+
+### 树节点
+
+我们已经看到我们将使用树来表示代码。 那么，我们需要的是这些节点的类！如下所示：
+
+``` Python
+from dataclasses import dataclass
+
+@dataclass
+class TreeNode:
+    # pass
+```
+
+在这个系列中，我们将为每种类型的节点创建 `TreeNode` 的子类。现在，我们将为二进制运算（加法和减法）和整数创建节点类型：
+
+``` Python
+@dataclass
+class BinOp(TreeNode):
+    op: str
+    left: "Int"
+    right: "Int"
+
+@dataclass
+class Int(TreeNode):
+    value: int
+```
+
+### 定义解析器
+
+为了定义我们的解析器，我们将使用名为 `eat` 和 `peek` 的两个辅助方法：
+
+``` Python
+class Parser:
+    def __init__(self, tokens: list[Token]) -> None:
+        self.tokens: list[Token] = tokens
+        self.next_token_index: int = 0
+        """Points to the next token to be consumed."""
+
+    def eat(self, expected_token_type: TokenType) -> Token:
+        """Returns the next token if it is of the expected type.
+
+        If the next token is not of the expected type, this raises an error.
+        """
+        next_token: Token = self.tokens[self.next_token_index]
+        self.next_token_index += 1
+        if next_token.type != expected_token_type:
+            raise RuntimeError(f"Expected {expected_token_type}, ate {next_token!r}.")
+        return next_token
+
+    def peek(self, skip: int = 0) -> TokenType | None:
+        """Checks the type of an upcoming token without consuming it."""
+        peek_at: int = self.next_token_index + skip
+        return self.tokens[peek_at].type if peek_at < len(self.tokens) else None
+```
+
+`eat` 方法接受一个标记类型作为参数，确保我们排好队的下一个标记是该类型，然后返回该标记。（最后，`eat` 方法将检查我们的代码是否合理）。
+
+我们可以使用 `peek` 方法来窥视即将到来的标记类型，而无需消耗标记。这就好比我们展望未来，看看即将发生什么。
+
+如果你看一下同时使用这两个方法的 `parse` 方法，就会对这两个方法有更多的了解：
+
+``` Python
+class Parser:
+    # ...
+
+    def parse(self) -> BinOp:
+        """Parses the program."""
+        left_op: Token = self.eat(TokenType.INT)
+
+        if self.peek() == TokenType.PLUS:
+            op = "+"
+            self.eat(TokenType.PLUS)
+        else:
+            op = "-"
+            self.eat(TokenType.MINUS)
+
+        right_op: Token = self.eat(TokenType.INT)
+
+        return BinOp(op, Int(left_op.value), Int(right_op.value))
+```
+
+让我们逐行分析。首先是方法的签名和注释：
+
+``` Python
+def parse(self) -> BinOp:
+    """Parses the program."""
+```
+
+方法 `parse` 不需要任何参数，它会返回一个 `BinOp` 节点：我们要解析的加法或减法的节点。
+
+下一行调用 `eat` 方法：
+
+``` Python
+left_op = self.eat(TokenType.INT)
+```
+
+如果我们要解析加法和减法，我们知道首先要看到的是一个整数。因此，我们调用标记类型为 `INT` 的方法 `eat`。如果第一个标记不是整数，解析器就会抱怨。
+
+然后，我们需要弄清楚是加法还是减法。这时就需要使用 `peek` 方法了：
+
+``` Python
+if self.peek() == TokenType.PLUS:
+    op = "+"
+    self.eat(TokenType.PLUS)
+else:
+    op = "-"
+    self.eat(TokenType.MINUS)
+```
+
+我们窥视下一个标记，因为我们不知道它是 `PLUS` 还是 `MINUS`。如果是 `PLUS`，我们就吃掉标记并设置 `op = "+"`。如果不是 `PLUS`，我们就认为它一定是 `MINUS` 并直接吃掉该标记。我们不需要窥视它是否是一个 `MINUS` 标记，因为如果它不是，那么 `eat` 方法就会向我们抱怨。
+
+在吃掉操作符标记后，我们可以期待一个新的整数标记：
+
+``` Python
+right_op = self.eat(TokenType.INT)
+```
+
+最后，我们需要使用标记及其值来构建重要的树节点！`left_op` 和 `right_op` 标记的值必须用树节点 `Int` 包装，而运算符本身必须用 `BinOp` 节点包装：
+
+``` Python
+return BinOp(op, Int(left_op.value), Int(right_op.value))
+```
+
+### 运行解析器
+
+现在，我们已经设置了简单的解析器，可以试着用几个代码示例来运行它：
+
+``` Python
+if __name__ == "__main__":
+    from tokenizer import Tokenizer
+
+    CODE = "3 + 5"
+    parser = Parser(list(Tokenizer(CODE)))
+    print(parser.parse())  # BinOp(op='+', left=Int(value=3), right=Int(value=5))
+```
+
+如果我们将代码改为类似 `+ 5` 的内容，解析器就会抱怨：
+
+``` Bash
+RuntimeError: Expected int, ate Token(type=<TokenType.PLUS: 'plus'>, value=None).
+```
+
+我们得到这条错误信息是因为我们原本期望会在变量 `left_op` 中吃到一个整数，结果却发现了加号。
+
+如果将 `CODE` 改为 `3 3`，会出现什么错误？
+
+如果你猜到解析器会抱怨说它想要减号，那你就猜对了：
+
+``` Python
+if __name__ == "__main__":
+    from tokenizer import Tokenizer
+
+    CODE = "3 3"
+    parser = Parser(list(Tokenizer(CODE)))
+    print(parser.parse())  # RuntimeError: Expected minus, ate Token(type=<TokenType.INT: 'int'>, value=3).
+```
+
+为什么解析器说它要的是减号，而不是加号或减号？因为，如果你还记得，在 `parse` 方法中，我们用 `peek` 来寻找一个加号。当我们没有找到它时，我们假设会得到一个负数，并试图吃掉它。当我们找到一个整数时，解析器发出了抱怨。
+
+### 解析完整的程序
+
+此时，解析器只解析一个加法或减法。不过，如果你给它更多的标记，解析器也不会抱怨：
+
+``` Python
+if __name__ == "__main__":
+    from tokenizer import Tokenizer
+
+    CODE = "3 + 5 - 2"
+    parser = Parser(list(Tokenizer(CODE)))
+    print(parser.parse())  # BinOp(op='+', left=Int(value=3), right=Int(value=5))
+```
+
+一般来说，在解析完一个完整的程序后，我们还要确保我们解析了整个程序。现在，我们将改变解析器，使其预期程序由单项加法或减法组成。但我们该怎么做呢？
+
+解析加法或减法后，我们会吃掉 EOF 标记！下面是更新后的 `parse` 方法：
+
+``` Python
+class Parser:
+    # ...
+
+    def parse(self) -> BinOp:
+        """Parses the program."""
+        left_op = self.eat(TokenType.INT)
+
+        if self.peek() == TokenType.PLUS:
+            op = "+"
+            self.eat(TokenType.PLUS)
+        else:
+            op = "-"
+            self.eat(TokenType.MINUS)
+
+        right_op = self.eat(TokenType.INT)
+
+        self.eat(TokenType.EOF)
+
+        return BinOp(op, Int(left_op.value), Int(right_op.value))
+```
+
+### 测试解析器
+
+与标记符号生成器一样，我们要为解析器编写一些基本测试。下面是两个测试，一个用来测试加法，另一个用来测试减法：
+
+``` Python
+from parser import Parser, Int, BinOp
+from tokenizer import Token, TokenType
+
+def test_parsing_addition():
+    tokens = [
+        Token(TokenType.INT, 3),
+        Token(TokenType.PLUS),
+        Token(TokenType.INT, 5),
+        Token(TokenType.EOF),
+    ]
+    tree = Parser(tokens).parse()
+    assert tree == BinOp(
+        "+",
+        Int(3),
+        Int(5),
+    )
+
+def test_parsing_subtraction():
+    tokens = [
+        Token(TokenType.INT, 5),
+        Token(TokenType.MINUS),
+        Token(TokenType.INT, 2),
+        Token(TokenType.EOF),
+    ]
+    tree = Parser(tokens).parse()
+    assert tree == BinOp(
+        "-",
+        Int(5),
+        Int(2),
+    )
+```
+
+现在，您可以使用 `pytest .` 重新运行测试了...不过它不起作用！
+
+运行测试时，无法将解析器导入测试脚本：
+
+``` Python
+ModuleNotFoundError: No module named 'parser'
+```
+
+问题在于解析器尚未安装，因此您可以通过重新 `pip` 安装代码来解决这个问题：
+
+``` Bash
+❯ pip install -e .
+```
+
+但这也会出错！现在问题出在哪里？问题在于你的目录根目录中有两个文件（`tokenizer.py` 和 `parser.py`），而且你没有正确配置你的项目。
+
+但是，这不是你的错。我只是没告诉你该怎么做！
+
+### `src` 文件夹结构
+
+最简单的方法是创建一个 `src/python` 文件夹，在其中存放所有源代码。目录结构应该是这样的：
+
+``` Bash
+- src
+  |- python
+     |- parser.py
+     |- tokenizer.py
+- tests
+  |- test_parser.py
+  |- test_tokenizer.py
+...
+```
+
+当你这样做时，你还必须修正导入模块。~~在源代码中，您可以像这样使用相对导入：~~
+
+> 译者注：如果使用相对导入，会出现错误 `ImportError: attempted relative import with no known parent package`
+
+``` Python
+# parser.py
+from dataclasses import dataclass
+
+# notice the dot here.
+# from .tokenizer import Token, TokenType
+from python.tokenizer import Token, TokenType
+
+# ...
+```
+
+在测试中，您需要在导入前加上 `python.`，因为分词器和解析器都在该包中：
+
+``` Python
+# test_tokenizer.py
+import pytest
+
+from python.tokenizer import Token, Tokenizer, TokenType
+```
+
+完成上述操作后，就可以使用 `pip install -e .` 安装我们的 `python` 模块，然后测试就会运行：
+
+``` Bash
+❯ pytest .
+=========================================================== test session starts ============================================================
+platform linux -- Python 3.11.2, pytest-7.4.3, pluggy-1.3.0
+rootdir: /home/kasen/bpci
+collected 10 items
+
+test/test_parser.py ..                                                                                                               [ 20%]
+test/test_tokenizer.py ........                                                                                                      [100%]
+
+============================================================ 10 passed in 0.01s ============================================================
+```
+
+但有一点要注意，运行文件 `tokenizer.py` 或 `parser.py` 时，应分别使用 `python -m python.tokenizer` 或 `python -m python.parser` 命令，而不是 `python tokenizer.py` 或 `python parser.py`。
