--- a/translations/02.md
+++ b/translations/02.md
@@ -1,26 +1,26 @@
 ---
-title: "[译] 构建 Python 编译器和解释器 - 02 数字"
+title: "[译] 构建一个 Python 编译器和解释器 - 02 数字"
 description:
-- 在构建 Python 编译器和解释器[系列](https://mathspp.com/blog/tag:bpci)的第二部分中，我们将改进对数字的支持。
+- 在构建 Python 编译器和解释器系列的第二部分中，我们将改进对数字的支持。
 ---
 
 ## 构建 Python 编译器和解释器
 
-本文是 ["构建 Python 编译器和解释器"](https://mathspp.com/blog/tag:bpci) 系列的第二篇文章，因此在阅读本文之前，请确保您已经阅读了第一篇文章。
+本文是 ["构建 Python 编译器和解释器"](https://mathspp.com/blog/tag:bpci) 系列的第二篇文章，因此在阅读本文之前，请确保您已经阅读了第一篇内容。
 
-作为本文的起点的代码是 [GitHub 代码库中的 v0.1.0 标签代码](https://github.com/mathspp/building-a-python-compiler-and-interpreter/tree/v0.1.0)。
+[GitHub 代码库中的 v0.1.0 标签](https://github.com/mathspp/building-a-python-compiler-and-interpreter/tree/v0.1.0)是作为本文起点的代码。
 
 ## 目标
 
 本文的目标如下：
 
-- 做一些小改进来让我们的工作更轻松（漂亮的打印树以及更好的标记和字节码表示）；
+- 做一些小改进来让我们的工作更轻松（实现漂亮的打印树以及更好的标记和字节码表示）；
 - 增加对多位数整数的支持；以及
 - 增加对浮点数的支持。
 
 ## 更好的打印
 
-我们要做的第一件事就是确保我们的自定义类（特别是对于标记和字节码）在打印出来时看起来很优雅。
+我们要做的第一件事就是确保我们的自定义类（特别是对于标记和字节码）在打印时看起来很优雅。
 
 例如，如果你创建一个标记并打印出来，看起来就像这样：
 
@@ -40,7 +40,7 @@ Token(type=<TokenType.INT: 'int'>, value=3)
 Bytecode(type=BytecodeType.BINOP, value='+')
 ```
 
-我们希望简化这些字符串表示法，以便将来调试特定功能时更容易读取打印输出。
+我们希望简化这些字符串表示形式，以便将来调试特定功能时更容易阅读打印输出。
 
 ### 更好的标记字符串表示
 
@@ -51,7 +51,7 @@ Bytecode(type=BytecodeType.BINOP, value='+')
 Token(type=<TokenType.INT: 'int'>, value=3)
 ```
 
-我们的最终目标是实现这个表示:
+我们的最终目标是实现这种表示:
 
 ``` Python
 >>> tok
@@ -73,7 +73,7 @@ class TokenType(StrEnum):
         return f"{self.__class__.__name__}.{self.name}"
 ```
 
-f-string 的第一部分，`self.__class__.__name__` 使用特殊属性 `__name__` 来动态获取类的名称，这意味着我们不需要写类似 `f"TokenType(...)` 这样的内容。因此，如果我们以后更改了 `TokenType` 类的名称，我们就不需要记得也要更改 `__repr__` 方法中的名称了。
+F-String 的第一部分，`self.__class__.__name__` 使用特殊属性 `__name__` 来动态获取类的名称，这意味着我们不需要写类似 `f"TokenType(...)` 这样的内容。因此，如果我们以后更改了 `TokenType` 类的名称，我们就不需要记住 `__repr__` 方法中的名称也要更改了。
 
 标记类型现在看起来像这样：
 
@@ -95,7 +95,7 @@ class Token:
         return f"{self.__class__.__name__}({self.type!r}, {self.value!r})"
 ```
 
-我们使用同样的 `__name__` "技巧"，然后用修饰符 `!r` 包含类型和值，这样类型和值就可以作为 Python 代码被复制和粘贴。
+我们使用同样的 `__name__` "技巧"，然后在类型和值中包含修饰符 `!r`，从而类型和值就可以作为 Python 代码被复制和粘贴。
 
 例如，就目前而言，这是前一个标记的样子:
 
@@ -131,15 +131,15 @@ class Bytecode:
 Bytecode(BytecodeType.BINOP, '+')
 ```
 
-这个字节码的值是一个字符串，这说明了为什么在 f-string 的值中还必须包含修饰符 `!r` ，否则就会直接打印出一个 `+`，我们就无法直接复制和粘贴了。
+这个字节码的值是一个字符串，这说明了为什么在 F-String 的值中还必须包含修饰符 `!r` ，否则就会直接打印出一个 `+`，我们就无法直接复制和粘贴了。
 
 ## 更好的树打印
 
-在打印方面，我们要做的下一个改动是实现一个 `print_ast` 函数，它接受一棵树（通常是解析器的输出），通过缩进将其进行多行打印，以帮助我们直观地看到树的层次结构。现在看来这可能有点多余，但当我们需要调试解析器时，这将会派上用场。
+在打印方面，我们要做的下一个改动是实现一个 `print_ast` 方法，它接受一棵树（通常是解析器的输出），通过缩进将其进行多行打印，以帮助我们直观地看到树的层次结构。现在看来这可能有点多余，但当我们需要调试解析器时，这将会派上用场。
 
 （我将使用[结构模式匹配](https://docs.python.org/zh-cn/3/whatsnew/3.10.html#pep-634-structural-pattern-matching)，它需要 Python 3.10 或更高版本）。
 
-我们要实现的 `print_ast` 函数接受一棵树和一个可选参数 `depth`，该参数表示我们在树中的深度。然后，函数将打印当前节点，然后使用递归继续打印树。下面就是这个函数：
+我们要实现的 `print_ast` 方法接受一棵树和一个可选参数 `depth`，该参数表示我们在树中的深度。然后，方法将打印当前节点，然后使用递归继续打印树。下面就是这个方法：
 
 ``` Python
 def print_ast(tree: TreeNode, depth: int = 0) -> None:
@@ -155,7 +155,7 @@ def print_ast(tree: TreeNode, depth: int = 0) -> None:
             raise RuntimeError(f"Can't print a node of type {tree.__class__.__name__}")
 ```
 
-如果对代码 `3 + 5` 进行标记化和解析，然后用 `print_ast` 函数打印，就会得到下面的结果：
+如果对代码 `3 + 5` 进行标记化和解析，然后用 `print_ast` 方法打印，就会得到下面的结果：
 
 ``` Python
 +
@@ -163,7 +163,7 @@ def print_ast(tree: TreeNode, depth: int = 0) -> None:
     5
 ```
 
-从上面的输出结果可以看出，我采用了非常简单的格式。我以后可能会修改，但现在这样就可以了！
+从上面的输出结果可以看出，我使用了非常简单的格式。格式以后可能会进行修改，但现在这样就可以了！
 
 ## 多位数整数
 
@@ -215,7 +215,7 @@ class Tokenizer:
 
 ### 运行测试
 
-在此次更改后，我们可以使用 `pytest .` 运行测试来查看是否发现我们的更改有任何问题。如果一切正常，我们就没有破坏之前的测试。
+在此次更改后，我们可以使用 `pytest .` 运行测试来查看它是否发现我们的更改有任何问题。如果一切正常，我们就没有破坏之前的测试。
 
 现在，我们当然需要编写几个测试来检查较长的整数是否能正常工作：
 
@@ -352,7 +352,7 @@ def test_tokenizer_lone_period_is_error():
         list(Tokenizer("  .  "))
 ```
 
-总是要写测试！在编写测试之前，我在实现过程中遇过一个愚蠢的错误！
+一定要写测试！在编写测试之前，我在实现过程中遇过一个愚蠢的 bug！
 
 ### 解析浮点数
 
@@ -446,7 +446,7 @@ class Parser:
         return Float(self.eat(TokenType.FLOAT).value)
 ```
 
-我们甚至可以再创建一个层次，即名为 `parse_computation` 的方法，专门用于解析加法和减法：
+我们甚至可以再创建一层，即名为 `parse_computation` 的方法，专门用于解析加法和减法：
 
 ``` Python
 class Parser:
