--- a/translations/02.md
+++ b/translations/02.md
@@ -594,3 +594,7 @@ def test_arithmetic_with_floats(code: str, result: int):
 - 能否增加对连续多个加减法的支持？例如，你能让程序使用代码 `"1 + 2 - 3"` 吗？
 - 能否增加对一元减法和一元加法的支持？
 - 能否增加对带括号的表达式的支持？
+
+---
+
+原文链接：<https://mathspp.com/blog/building-a-python-compiler-and-interpreter-02-numbers>
