优化代码和翻译

--- a/translations/03.md
+++ b/translations/03.md
@@ -535,8 +535,8 @@ class Compiler:
 
 ``` Python
 if __name__ == "__main__":
-    from .tokenizer import Tokenizer
-    from .parser import Parser
+    from python.tokenizer import Tokenizer
+    from python.parser import Parser
 
     compiler = Compiler(Parser(list(Tokenizer("3 + 5 - 7 + 1.2 + 2.4 - 3.6"))).parse())
     for bc in compiler.compile():
@@ -687,6 +687,8 @@ def run_computation(code: str) -> int:
 然后，当我们研究编译器和解释器时。我们使用访问者模式将解析树的任意复杂性与编译单个树节点这一简单得多的问题解耦开来。我们还使用了访问者模式，将任意字节码操作序列的解释与解释单个字节码这一简单得多的问题解耦开来。
 
 您可以在此 GitHub 代码库的 [v0.3.0 标签](https://github.com/mathspp/building-a-python-compiler-and-interpreter/tree/v0.3.0)中获取本文的代码。
+
+> 译者注：我的代码在[这里](https://github.com/imkasen/bpci/tree/v0.3.1)。
 
 ## 下一步
 
